--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: Home
 <hr />
 
 <!-- Ballon Links set static\css\style.css line ~6653 to width percentage per balloon; i.e. 3 is 33%, 4 is 25%, ...-->
-	<h2 class="section-title">What is this Collaboration?</h2>
+	<h2 class="section-title">What is this Collaboration? WHY ITS ABOUT UCEF</h2>
 	<p>Discussion ....</p>
 
       <ul class="audiences">
