Changes from Randy on June25 to index, analogy, FAQs, and use-cases

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ title: Home
 ---
 <section class="home home-title">
   <hgroup>
-    <h1 style="color:black;">This Collaboration</h1>
-    <img class="logo" src="{{ site.baseurl }}/assets/electric-cables.jpg" alt="UCEF"> <!-- size of image set in style.css "home-title img" -->
+    <h1 style="color:black;">UCEF: Universal CPS Environment for Federation</h1>
+    <img class="logo" src="{{ site.baseurl }}/assets/control-board.jpg" alt="UCEF"> <!-- size of image set in style.css "home-title img" -->
     <h2>Exposing Powerful Techniques for this Collaboration</h2>
   </hgroup>
 </section>
@@ -14,11 +14,29 @@ title: Home
     <div class="section-content">
 <!-- NEWS Banner insert -->
 <!-- End Banner insert -->
-<hr />
+<hr 
 
 <!-- Ballon Links set static\css\style.css line ~6653 to width percentage per balloon; i.e. 3 is 33%, 4 is 25%, ...-->
-	<h2 class="section-title">What is this Collaboration? WHY ITS ABOUT UCEF</h2>
-	<p>Discussion ....</p>
+	<h2 class="section-title">UCEF is an open-source tool kit that provides a collaborative experiment-development environoment.</h2>
+	<p>The National Institute of Standards and Technology (NIST) and its partner, the Institute for Software Integrated Systems at Vanderbilt University,
+	have developed a collaborative experiment development environment across heterogeneous architectures integrating best-of-breed tools
+	including programming languages, communications co-simulation, simulation platforms, hardware in the loop, and others. 
+	This environment combines these simulators and emulators from many researchers and companies with a standardized communications protocol, 
+	IEEE Standard 1516 High Level Architecture (HLA).
+	</p>
+	
+	NIST is hosting a workshop on July 27, 2017, at the NIST Campus in Gaithersburg, Maryland.
+	At this workshop, participants will learn the details of UCEF; 
+	obtain a copy that they can install at the workshop and take home with them on a USB drive; 
+	and participate in a hands-on exercise to design/implement/build a collaborative experiment involving all attendees.
+	</p>
+	We are looking for practitioners of these technologies who may be interested in not only using UCEF, 
+	but more importantly in contributing to its development and evolution. 
+	</p>
+	For additional information, including registration details and a preliminary agenda, please visit this link. 
+	</p>
+	https://appam.certain.com/profile/web/index.cfm?PKWebId=0x14555479a 
+</p>
 
       <ul class="audiences">
         <li>
