initial work on ucef site. not ready yet

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@ title: Home
 ---
 <section class="home home-title">
   <hgroup>
-    <h1 style="color:black;">UCEF: Universal CPS Environment for Federation</h1>
-    <img class="logo" src="{{ site.baseurl }}/assets/control-board.jpg" alt="UCEF"> <!-- size of image set in style.css "home-title img" -->
-    <h2>Exposing Powerful Techniques for this Collaboration</h2>
+<!--    <h1 style="color:black;">UCEF: Universal CPS Environment for Federation</h1>
+    <img class="logo" src="{{ site.baseurl }}/assets/ucef_final.jpg" alt="UCEF"> 
+	
+    <h2>Exposing Powerful Techniques for experimental Collaboration</h2> -->
+<!-- size of image set in style.css "home-title img" -->
   </hgroup>
 </section>
 <section class="home home-about" id="#home-about">
@@ -24,18 +26,6 @@ title: Home
 	This environment combines these simulators and emulators from many researchers and companies with a standardized communications protocol, 
 	IEEE Standard 1516 High Level Architecture (HLA).
 	</p>
-	
-	NIST is hosting a workshop on July 27, 2017, at the NIST Campus in Gaithersburg, Maryland.
-	At this workshop, participants will learn the details of UCEF; 
-	obtain a copy that they can install at the workshop and take home with them on a USB drive; 
-	and participate in a hands-on exercise to design/implement/build a collaborative experiment involving all attendees.
-	</p>
-	We are looking for practitioners of these technologies who may be interested in not only using UCEF, 
-	but more importantly in contributing to its development and evolution. 
-	</p>
-	For additional information, including registration details and a preliminary agenda, please visit this link. 
-	</p>
-	https://appam.certain.com/profile/web/index.cfm?PKWebId=0x14555479a 
 </p>
 
       <ul class="audiences">
