--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ title: Home
           <div class="icon">
             <i class="fa fa-info"></i>
           </div>
-          <h3><a href="http://localhost:4000/UCEF">Learn</a></h3>
+          <h3><a href="http://localhost:4000/UCEF">About</a></h3>
           Learn about this collaboration
         </li>
         <li>
@@ -41,7 +41,14 @@ title: Home
             <i class="fa fa-book"></i>
           </div>
           <h3><a href="{{ site.baseurl }}/library">Library</a></h3>
-          Videos, presentations, and documents
+          Development resourses.
+        </li>
+        <li>
+          <div class="icon">
+            <i class="fa fa-file-code-o"></i>
+          </div>
+          <h3><a href="{{ site.baseurl }}/development">Development</a></h3>
+          Technical descriptions and development information.
         </li>
 		<!-- Add additional balloons -- no more than 4 total recommended 
         <li>
