redirected development pages

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ title: Home
           <div class="icon">
             <i class="fa fa-info"></i>
           </div>
-          <h3><a href="http://localhost:4000/UCEF">About</a></h3>
-          Learn about this collaboration
+          <h3><a href="https://www.nist.gov/el/cyber-physical-systems">About</a></h3>
+          Learn about this collaboration and NIST involvement in Cyber-Physical Systems research.
         </li>
         <li>
           <div class="icon">
