Added blog and community pages

--- a/index.html
+++ b/index.html
@@ -50,7 +50,14 @@ title: Home
           <h3><a href="{{ site.baseurl }}/development">Development</a></h3>
           Technical descriptions and development information.
         </li>
-		<!-- Add additional balloons -- no more than 4 total recommended 
+                <li>
+                    <div class="icon">
+                        <i class="fa fa-users"></i>
+                    </div>
+                    <h3><a href="{{ site.baseurl }}/community">Community</a></h3>
+                    Discussions with the Community of UCEF Collaborators
+                </li>
+                <!-- Add additional balloons -- no more than 4 total recommended 
         <li>
           <div class="icon">
             <i class="fa <<font awsome name>>"></i>
@@ -59,9 +66,8 @@ title: Home
           description
         </li>
 		-->
-      </ul>
+            </ul>
+        </div>
     </div>
-  </div>
 </section>
 <!-- End Ballon Links -->
-
