--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: Home
 <hr 
 
 <!-- Ballon Links set static\css\style.css line ~6653 to width percentage per balloon; i.e. 3 is 33%, 4 is 25%, ...-->
-	<h2 class="section-title">UCEF is an open-source tool kit that provides a collaborative experiment-development environoment.</h2>
+	<h2 class="section-title">UCEF is an open-source tool kit that provides a collaborative experiment-development environment.</h2>
 	<p>The National Institute of Standards and Technology (NIST) and its partner, the Institute for Software Integrated Systems at Vanderbilt University,
 	have developed a collaborative experiment development environment across heterogeneous architectures integrating best-of-breed tools
 	including programming languages, communications co-simulation, simulation platforms, hardware in the loop, and others. 
