Convert to NIST new standardized header and footer

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ title: Home
           <div class="icon">
             <i class="fa fa-info"></i>
           </div>
-          <h3><a href="https://www.nist.gov/el/cyber-physical-systems">About</a></h3>
+          <h3><a href="{{ site.baseurl }}/aboutus">About</a></h3>
           Learn about this collaboration and NIST involvement in Cyber-Physical Systems research.
         </li>
         <li>
