includes rename of federation project PingPong

--- a/test/BuildPingPongFederationWithExports.html
+++ b/test/BuildPingPongFederationWithExports.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 	<meta content="text/html; charset=UTF-8" http-equiv="content-type" />
-	<title>BuildPingPongFederationWithExportsa</title>
+	<title>BuildPingPongFederationWithExports</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
@@ -48,6 +48,18 @@
 <tr><td>click</td><td>//div[4]/button<datalist><option>//div[4]/button</option><option>css=button.btn.btn-primary.btn-create.btn-create-snap-shot.activated</option></datalist></td><td></td>
 </tr>
 <tr><td>pause</td><td><datalist><option></option></datalist></td><td>3000</td>
+</tr>
+<tr><td>click</td><td>//span[@title='&lt;&lt;&gt;&gt;']<datalist><option>//span[@title='&lt;&lt;&gt;&gt;']</option><option>id=RaphaelSVG_0</option><option>css=#RaphaelSVG_0</option></datalist></td><td></td>
+</tr>
+<tr><td>doubleClick</td><td>//div[@class='widget c']//input[@type='text']<datalist><option>//div[@class='widget c']//input[@type='text']</option></datalist></td><td></td>
+</tr>
+<tr><td>type</td><td>xpath=//div[@class='widget c']//input[@type='text']<datalist><option>xpath=//div[@class='widget c']//input[@type='text']</option><option>//div[@class='widget c']//input[@type='text']</option><option>body.ui-layout-container:nth-child(4) div.ui-layout-east.side-panel.no-print.ui-layout-pane.ui-layout-pane-east:nth-child(2) div.panel-base-wh.panel-base-scroll:nth-child(2) div.panel-body.drawing-canvas.property-editor div.tab-content div.tab-pane.active:nth-child(1) div.property-list div.pgp li.folder:nth-child(3) div.pgp ul:nth-child(1) li.cr.string div:nth-child(1) div.widget.c &gt; input:nth-child(1)</option><option>css=body.ui-layout-container:nth-child(4) div.ui-layout-east.side-panel.no-print.ui-layout-pane.ui-layout-pane-east:nth-child(2) div.panel-base-wh.panel-base-scroll:nth-child(2) div.panel-body.drawing-canvas.property-editor div.tab-content div.tab-pane.active:nth-child(1) div.property-list div.pgp li.folder:nth-child(3) div.pgp ul:nth-child(1) li.cr.string div:nth-child(1) div.widget.c &gt; input:nth-child(1)</option></datalist></td><td>PingPong</td>
+</tr>
+<tr><td>sendKeys</td><td>xpath=//div[@class='widget c']//input[@type='text']<datalist><option>xpath=//div[@class='widget c']//input[@type='text']</option><option>//div[@class='widget c']//input[@type='text']</option><option>body.ui-layout-container:nth-child(4) div.ui-layout-east.side-panel.no-print.ui-layout-pane.ui-layout-pane-east:nth-child(2) div.panel-base-wh.panel-base-scroll:nth-child(2) div.panel-body.drawing-canvas.property-editor div.tab-content div.tab-pane.active:nth-child(1) div.property-list div.pgp li.folder:nth-child(3) div.pgp ul:nth-child(1) li.cr.string div:nth-child(1) div.widget.c &gt; input:nth-child(1)</option><option>css=body.ui-layout-container:nth-child(4) div.ui-layout-east.side-panel.no-print.ui-layout-pane.ui-layout-pane-east:nth-child(2) div.panel-base-wh.panel-base-scroll:nth-child(2) div.panel-body.drawing-canvas.property-editor div.tab-content div.tab-pane.active:nth-child(1) div.property-list div.pgp li.folder:nth-child(3) div.pgp ul:nth-child(1) li.cr.string div:nth-child(1) div.widget.c &gt; input:nth-child(1)</option></datalist></td><td></td>
+</tr>
+<tr><td>pause</td><td><datalist><option></option></datalist></td><td>1000</td>
+</tr>
+<tr><td>click</td><td>//span[@title='&lt;&lt;&gt;&gt;']<datalist><option>//span[@title='&lt;&lt;&gt;&gt;']</option><option>id=RaphaelSVG_0</option><option>css=#RaphaelSVG_0</option></datalist></td><td></td>
 </tr>
 <tr><td>click</td><td>//div[@id='I_000003']/div<datalist><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='FCO'])[1]/following::div[8]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='Language [C2WT]'])[1]/following::div[11]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='FederationProject'])[1]/preceding::div[10]</option><option>//div[@id='I_000003']/div</option><option>//div[2]/div[5]/div</option><option>css=#I_000003 &gt; div.model-decorator</option></datalist></td><td></td>
 </tr>
@@ -191,7 +203,7 @@
 </tr>
 <tr><td>click</td><td>link=Show results...<datalist><option>link=Show results...</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='Created with Raphaël 2.1.2'])[2]/preceding::a[16]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='Created with Raphaël 2.1.2'])[3]/preceding::a[17]</option><option>//a[contains(text(),'Show results...')]</option><option>xpath=(//a[contains(@href, '#')])[17]</option><option>//div/div[2]/div/div/ul/li/a</option><option>css=ul.dropdown-menu.no-min-width &gt; li &gt; a.dropdown-list-button</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>//a[contains(text(),"FederationName_generated")]<datalist><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='Created with Raphaël 2.1.2'])[2]/preceding::i[14]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='Created with Raphaël 2.1.2'])[3]/preceding::i[14]</option><option>//div[2]/div/div/a/i</option><option>css=i.glyphicon.glyphicon-play</option><option>//a[contains(text(),"FederationProject_generated")]</option><option>//a[contains(text(),"FederationName_generated")]</option></datalist></td><td></td>
+<tr><td>click</td><td>//a[contains(text(),"PingPong_generated")]<datalist><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='Created with Raphaël 2.1.2'])[2]/preceding::i[14]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='Created with Raphaël 2.1.2'])[3]/preceding::i[14]</option><option>//div[2]/div/div/a/i</option><option>css=i.glyphicon.glyphicon-play</option><option>//a[contains(text(),"FederationProject_generated")]</option><option>//a[contains(text(),"FederationName_generated")]</option><option>//a[contains(text(),"PingPong_generated")]</option></datalist></td><td></td>
 </tr>
 </tbody></table>
 <table cellpadding="1" cellspacing="1" border="1">
@@ -215,7 +227,7 @@
 </tr>
 <tr><td>click</td><td>link=Show results...<datalist><option>link=Show results...</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='Created with Raphaël 2.1.2'])[2]/preceding::a[16]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='Created with Raphaël 2.1.2'])[3]/preceding::a[17]</option><option>//a[contains(text(),'Show results...')]</option><option>xpath=(//a[contains(@href, '#')])[17]</option><option>//div/div[2]/div/div/ul/li/a</option><option>css=ul.dropdown-menu.no-min-width &gt; li &gt; a.dropdown-list-button</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>//a[contains(text(),"FederationName_deployment")]<datalist><option>//a[contains(text(),"FederationName_generated")]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='Created with Raphaël 2.1.2'])[2]/preceding::i[14]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='Created with Raphaël 2.1.2'])[3]/preceding::i[14]</option><option>//div[2]/div/div/a/i</option><option>css=i.glyphicon.glyphicon-play</option><option>//a[contains(text(),"FederationProject_generated")]</option><option>//a[contains(text(),"FederationName_deployment")]</option></datalist></td><td></td>
+<tr><td>click</td><td>//a[contains(text(),"PingPong_deployment")]<datalist><option>//a[contains(text(),"FederationName_generated")]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='Created with Raphaël 2.1.2'])[2]/preceding::i[14]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='Created with Raphaël 2.1.2'])[3]/preceding::i[14]</option><option>//div[2]/div/div/a/i</option><option>css=i.glyphicon.glyphicon-play</option><option>//a[contains(text(),"FederationProject_generated")]</option><option>//a[contains(text(),"FederationName_deployment")]</option><option>//a[contains(text(),"PingPong_deployment")]</option></datalist></td><td></td>
 </tr>
 </tbody></table>
 </body>
