modify for 7 column project manage and smaller screen for webgme script

--- a/test/BuildPingPongFederationWithExports.html
+++ b/test/BuildPingPongFederationWithExports.html
@@ -17,7 +17,7 @@
 </tr>
 <tr><td>click</td><td>//i[@class='btn-info-toggle fa fa-chevron-left']<datalist><option>//i[@class='btn-info-toggle fa fa-chevron-left']</option></datalist></td><td></td>
 </tr>
-<tr><td>click</td><td>xpath=(//span[@title='Open'][contains(text(),'PingPong')]/../../td[6]//i[@class='glyphicon glyphicon-trash delete-project extra-info'])<datalist><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='[Read-Only]'])[5]/following::input[1]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='TestFederation'])[3]/following::input[1]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='guest'])[6]/preceding::input[1]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='TestHimanshu'])[1]/preceding::input[1]</option><option>//tr[5]/td[3]/input</option><option>xpath=(//span[@title='Open'][contains(text(),'TestFederation')]/../../td[7]//i[@class='glyphicon glyphicon-trash delete-project extra-info'])</option><option>xpath=(//span[@title='Open'][contains(text(),'TestFederation')]/../../td[6]//i[@class='glyphicon glyphicon-trash delete-project extra-info'])</option><option>xpath=(//span[@title='Open'][contains(text(),'PingPong')]/../../td[7]//i[@class='glyphicon glyphicon-trash delete-project extra-info'])</option><option>xpath=(//span[@title='Open'][contains(text(),'PingPong')]/../../td[6]//i[@class='glyphicon glyphicon-trash delete-project extra-info'])</option></datalist></td><td></td>
+<tr><td>click</td><td>xpath=(//span[@title='Open'][contains(text(),'PingPong')]/../../td[7]//i[@class='glyphicon glyphicon-trash delete-project extra-info'])<datalist><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='[Read-Only]'])[5]/following::input[1]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='TestFederation'])[3]/following::input[1]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='guest'])[6]/preceding::input[1]</option><option>xpath=(.//*[normalize-space(text()) and normalize-space(.)='TestHimanshu'])[1]/preceding::input[1]</option><option>//tr[5]/td[3]/input</option><option>xpath=(//span[@title='Open'][contains(text(),'TestFederation')]/../../td[7]//i[@class='glyphicon glyphicon-trash delete-project extra-info'])</option><option>xpath=(//span[@title='Open'][contains(text(),'TestFederation')]/../../td[6]//i[@class='glyphicon glyphicon-trash delete-project extra-info'])</option><option>xpath=(//span[@title='Open'][contains(text(),'PingPong')]/../../td[7]//i[@class='glyphicon glyphicon-trash delete-project extra-info'])</option><option>xpath=(//span[@title='Open'][contains(text(),'PingPong')]/../../td[7]//i[@class='glyphicon glyphicon-trash delete-project extra-info'])</option><option>xpath=(//span[@title='Open'][contains(text(),'PingPong')]/../../td[6]//i[@class='glyphicon glyphicon-trash delete-project extra-info'])</option></datalist></td><td></td>
 </tr>
 <tr><td>click</td><td>//button[@class='btn btn-ok btn-danger']<datalist><option>//div[3]/button</option><option>css=button.btn.btn-ok.btn-danger</option><option>//button[@class='btn btn-ok btn-danger']</option></datalist></td><td></td>
 </tr>
@@ -75,7 +75,7 @@
 <tr><td rowspan="1" colspan="3">CreateFederates</td></tr>
 </thead>
 <tbody>
-<tr><td>dragAndDrop</td><td>//div[@class='model-decorator']//div[@title='JavaFederate']/../..<datalist><option>//div[@id='/1125909226/1334526604']/div</option><option>//li[39]/div/div</option><option>//div[@class='model-decorator']//div[@title='JavaFederate']/../..</option></datalist></td><td>+200,0</td>
+<tr><td>dragAndDrop</td><td>//div[@class='model-decorator']//div[@title='JavaFederate']/../..<datalist><option>//div[@id='/1125909226/1334526604']/div</option><option>//li[39]/div/div</option><option>//div[@class='model-decorator']//div[@title='JavaFederate']/../..</option></datalist></td><td>+200,-400</td>
 </tr>
 <tr><td>click</td><td>//div[@id='I_000000']/div<datalist><option>//div[@id='I_000001']/div</option><option>//div[2]/div[2]/div</option><option>css=div.model-decorator</option><option>//div[@id='I_000000']/div</option></datalist></td><td></td>
 </tr>
@@ -87,7 +87,7 @@
 </tr>
 <tr><td>click</td><td>//div[@id='I_000000']/div<datalist><option>id=RaphaelSVG_0</option><option>css=#RaphaelSVG_0</option><option>//div[@id='I_000000']/div</option></datalist></td><td></td>
 </tr>
-<tr><td>dragAndDrop</td><td>//div[@id='/1125909226/1334526604']/div<datalist><option>//div[@id='/1125909226/1334526604']/div</option><option>//li[39]/div/div</option></datalist></td><td>+400,0</td>
+<tr><td>dragAndDrop</td><td>//div[@id='/1125909226/1334526604']/div<datalist><option>//div[@id='/1125909226/1334526604']/div</option><option>//li[39]/div/div</option></datalist></td><td>+400,-400</td>
 </tr>
 <tr><td>click</td><td>//div[@id='I_000001']/div<datalist><option>//div[@id='I_000000']/div</option><option>//div[@id='I_000001']/div</option><option>//div[2]/div[2]/div</option><option>css=div.model-decorator</option></datalist></td><td></td>
 </tr>
@@ -107,7 +107,7 @@
 <tbody>
 <tr><td>click</td><td>//div[@id='composition']/div/ul/li/ul/li/span/span<datalist><option>//div[@id='composition']/div/ul/li/ul/li/span/span</option><option>//li/ul/li/span/span</option><option>css=span.fancytree-node.fancytree-has-children.fancytree-lazy.gme-aspect.fancytree-exp-cd.fancytree-ico-c.fancytree-match &gt; span.fancytree-expander</option></datalist></td><td></td>
 </tr>
-<tr><td>dragAndDrop</td><td>//div[@class='name'][contains(text(),'C2WInteractionRoot')]/../..<datalist><option>//div[@id='composition']/div/ul/li/ul/li/ul/li[2]/span/span[3]</option><option>//li/ul/li/ul/li[2]/span/span[3]</option><option>//div[@class='model-decorator']//div[@title='C2WInteractionRoot']/../..</option><option>//div[@class='name'][contains(text(),'C2WInteractionRoot')]/../..</option></datalist></td><td>200,0</td>
+<tr><td>dragAndDrop</td><td>//div[@class='name'][contains(text(),'C2WInteractionRoot')]/../..<datalist><option>//div[@id='composition']/div/ul/li/ul/li/ul/li[2]/span/span[3]</option><option>//li/ul/li/ul/li[2]/span/span[3]</option><option>//div[@class='model-decorator']//div[@title='C2WInteractionRoot']/../..</option><option>//div[@class='name'][contains(text(),'C2WInteractionRoot')]/../..</option></datalist></td><td>200,-100</td>
 </tr>
 <tr><td>click</td><td>id=RaphaelSVG_0<datalist><option>id=RaphaelSVG_0</option><option>css=#RaphaelSVG_0</option></datalist></td><td></td>
 </tr>
@@ -123,7 +123,7 @@
 </tr>
 <tr><td>click</td><td>//body<datalist><option>//body</option><option>css=body.ui-layout-container</option></datalist></td><td></td>
 </tr>
-<tr><td>dragAndDrop</td><td>//div[@class='name'][contains(text(),'C2WInteractionRoot')]/../..<datalist><option>//div[@id='composition']/div/ul/li/ul/li/ul/li[2]/span/span[3]</option><option>//li/ul/li/ul/li[2]/span/span[3]</option><option>//div[@class='model-decorator']//div[@title='C2WInteractionRoot']/../..</option><option>//div[@class='name'][contains(text(),'C2WInteractionRoot')]/../..</option></datalist></td><td>400,0</td>
+<tr><td>dragAndDrop</td><td>//div[@class='name'][contains(text(),'C2WInteractionRoot')]/../..<datalist><option>//div[@id='composition']/div/ul/li/ul/li/ul/li[2]/span/span[3]</option><option>//li/ul/li/ul/li[2]/span/span[3]</option><option>//div[@class='model-decorator']//div[@title='C2WInteractionRoot']/../..</option><option>//div[@class='name'][contains(text(),'C2WInteractionRoot')]/../..</option></datalist></td><td>400,-100</td>
 </tr>
 <tr><td>click</td><td>//div[@id='I_000003']/div/div[2]<datalist><option>//div[@id='I_000003']/div/div[2]</option><option>//div[5]/div/div[2]</option><option>css=#I_000003 &gt; div.HLA-decorator &gt; div.type</option></datalist></td><td></td>
 </tr>
