--- a/index.html
+++ b/index.html
@@ -15,11 +15,50 @@ title: Home
   <div class="section-container">
     <div class="section-content">
 <!-- NEWS Banner insert -->
-
 <p style="line-height: normal;"><strong><span style="font-size: 14.0pt;">Upcoming Webinar: Universal CPS Environment for Federation (UCEF) BETA Release (September 14, 2018, 11:00 a.m. EDT)</span></strong></p>
 <p style="text-align:left; line-height: normal;"><span style="font-size: 12.0pt;">NIST will host a one and one half hour webinar&mdash;from 11:00 a.m. to 12:30 p.m., EDT, on September 14, 2018&mdash;to present the next release of the </span><a href="https://www.nist.gov/el/cyber-physical-systems/ucef-universal-cps-environment-federation"><span style="font-size: 12.0pt;">Universal CPS Environment for Federation (UCEF)</span></a><span style="font-size: 12.0pt;">. This new release (our BETA version) incorporates lessons learned through early usage and </span><span style="font-size: 12.0pt;">adds several substantial components to the UCEF repertoire&mdash;LabVIEW, GridlabD, Omnet++, and COA. These are in addition to native Java and C++ applications. </span><span style="font-size: 12.0pt;">The BETA version also features a universal gateway component that was developed to facilitate integration of domain-specific tools used in cyber-physical systems (CPS).</span></p>
 <p style="text-align:left; line-height: normal;"><span style="font-size: 12.0pt;">The webinar will be open to the first 250 participants to log in or call in. To join the webinar by computer, please go to </span><a href="https://global.gotomeeting.com/join/832557933"><span style="font-size: 12.0pt;">https://global.gotomeeting.com/join/832557933</span></a><span style="font-size: 12.0pt;">. To join by telephone, please call 1(408)650-3131 and use the access code (32557933#).</span></p>
 <p style="text-align:left; font-size: 12.0pt; line-height: 107%;"><span style="font-size: 12.0pt;">The UCEF development team has been hard at work this past year, readying a release of the UCEF Virtual Machine for general use in constructing simulations integrating tools from best of breed simulation environments, native languages, and hardware emulators and hardware in the loop. Developed through a collaboration between NIST and Vanderbilt University, UCEF has been infused with the knowledge and experience of a decade of research on collaborative experimental platforms.</span></p>
+
+<p><span style="text-align:left; font-size: 12.0pt; color: black;">Here is the agenda for the Webinar:</span></p>
+<p style="text-align:left; text-indent: .25in;"><strong><span style="font-size: 12.0pt; color: black;">Universal CPS Environment for Federation (UCEF) BETA Release Webinar (September 14, 2018, 11:00 a.m. EDT)</span></strong></p>
+<p style="text-align:left; text-indent: .25in;"><strong><span style="font-size: 12.0pt; color: black;">AGENDA</span></strong></p>
+<ul style="text-align:left; margin-top: 0in;">
+<li style="text-align:left; tab-stops: list .5in;"><strong>Background on Universal CPS Environment for Federation</strong></li>
+<li style="text-align:left; tab-stops: list .5in;"><strong>Selected Use Case: Transactive Energy Challenge</strong></li>
+<ul style="text-align:left; margin-top: 0in;">
+<li style="text-align:left; tab-stops: list 1.0in;">The TE Challenge Experiment</li>
+<li style="text-align:left; tab-stops: list 1.0in;">GridLAB-D Federate Overview</li>
+<li style="text-align:left; tab-stops: list 1.0in;">Database Federate Introduction</li>
+</ul>
+<li style="text-align:left; tab-stops: list .5in;"><strong>UCEF 1.0.0-BETA Features</strong></li>
+<ul style="text-align:left; margin-top: 0in;">
+<li style="text-align:left; tab-stops: list 1.0in;">Features at a Glance</li>
+<li style="text-align:left; tab-stops: list 1.0in;">Platform Extensibility / UCEF Gateway</li>
+</ul>
+<li style="text-align:left; tab-stops: list .5in;"><strong>Collaboration Web Site + Future Webinars</strong></li>
+<ul style="text-align:left; margin-top: 0in;">
+<li style="text-align:left; tab-stops: list 1.0in;">What to do to get involved &ndash; get it use it contribute if you like</li>
+<li style="text-align:left; tab-stops: list 1.0in;">Feature reveal webinars upcoming</li>
+<li style="text-align:left; tab-stops: list 1.0in;">Collaboration site</li>
+</ul>
+<li style="text-align:left; tab-stops: list .5in;"><strong>UCEF Live Tutorial / Demonstration</strong></li>
+<ul style="text-align:left; margin-top: 0in;">
+<li style="text-align:left; tab-stops: list 1.0in;">Create a simple federation</li>
+<li style="text-align:left; tab-stops: list 1.0in;">Export and build the executables</li>
+<ul style="text-align:left; margin-top: 0in;">
+<li style="text-align:left; tab-stops: list 1.5in;">Run default simulation</li>
+</ul>
+<li style="text-align:left; tab-stops: list 1.0in;">Code Development Example with Eclipse</li>
+<ul style="text-align:left; margin-top: 0in;">
+<li style="text-align:left; tab-stops: list 1.5in;">Implement code</li>
+<li style="text-align:left; tab-stops: list 1.5in;">Run custom code</li>
+</ul>
+</ul>
+</ul>
+
+
+
 <p style="text-align:left; line-height: normal;"><span style="font-size: 12.0pt;">Developers who attended the </span><a href="https://appam.certain.com/profile/web/index.cfm?PKWebId=0x14555479a"><span style="font-size: 12.0pt;">workshop that introduced the ALPHA version last summer</span></a><span style="font-size: 12.0pt;"> were able to install the UCEF Virtual Machine and begin developing a collaborative experiment run that same day with 25 participating laptops over a local WiFi network. Those who participate in the upcoming September 14 webinar, or view the archived version when it becomes available, should be equally well prepared to explore the BETA version.</span></p>
 <p style="text-align:left; margin-bottom: .0001pt; line-height: normal;"><span style="font-size: 12.0pt;">UCEF meets an important need of the CPS community. CPS contain co-engineered, interacting networks of physical and computational components from many different technology domains. Each of these domains (e.g., smart grid, smart cities, smart manufacturing, smart transportation, smart home, etc.) has technologies and simulation engines tailored to its individual needs and experiences.</span></p>
 <p style="text-align:left; margin-bottom: .0001pt; line-height: normal;"><span style="font-size: 12.0pt;">&nbsp;</span></p>
