--- a/index.html
+++ b/index.html
@@ -20,18 +20,10 @@ title: Home
             <a style="font-size: 28.0pt;" href="https://s3.amazonaws.com/nist-sgcps/UCEF/ucefvms/UCEF+1.0.0-beta-20180914.ova">Download UCEF 1.0.0 BETA with this link</a>
 			<br/>
             <a style="font-size: 14.0pt;" href="https://s3.amazonaws.com/nist-sgcps/UCEF/videos/UCEF1_0_0BETAWebinar.mp4">Watch the UCEF 1.0.0 BETA release webinar with this link</a>
-            <p style="line-height: normal;"><strong><span style="font-size: 14.0pt;">Upcoming Webinar: Universal CPS Environment for Federation (UCEF) GridLAB-D Federate (November 15, 2018, 12:00 p.m. EDT)</span></strong></p>
-			
-			<p style="text-align:left; line-height: normal;">We will conduct a webinar introducing the UCEF GridLAB-D Federate this coming Thursday as the next in a series of presentations on components of the UCEF platform. The GridLAB-D federate is a &ldquo;wrapper&rdquo; java library that can be used to integrate a the GridLAB-D simulator developed by Pacific Northwest National Laboratory (PNNL) into the High Level Architecture (HLA) platform used for UCEF. GridLAB-D is a powerful simulator of simple and complex energy grid simulations. This webinar will show how to use this component in UCEF simulations and how to cause data to be extracted from and injected into a GridLAB-D model. Please join us to learn about this tool and how it can be utilized to bring any domain-specific framework into the UCEF federated testbed environment.</p>
-			<p style="text-align:left; line-height: normal;">This is the next in a series of presentations held the third Thursday of each month, 12:00 P Eastern Time, Beginning October 18. Join the webinar at: <a href="https://global.gotomeeting.com/join/832557933">https://global.gotomeeting.com/join/832557933</a>. &nbsp;Phone: 1(408)650-3131;32557933#.</p>
-			<p style="text-align:left; line-height: normal;">These components are part of the UCEF 1.0.0 BETA Platform and will be the topics of the monthly webinars in order:</p>
-			<ul style="margin-top: 0in;">
-			<li style="text-align:left; tab-stops: list .5in;">UCEF Gateway &ndash; rapid development adaptor to UCEF Platform</span></li>
-			<li style="text-align:left; tab-stops: list .5in;"><span style="background: yellow;">GridLAB-D&trade; &ndash; Powerful re-usable Federate based on ucef-gateway to integrate PNNL Power System simulator</li>
-			<li style="text-align:left; tab-stops: list .5in;">Database &ndash; UCEF database federate and tools to automate software-less data capture from federated experiments</li>
-			<li style="text-align:left; tab-stops: list .5in;">LabVIEW&trade; &ndash; Integrate hardware and simulations using National Instruments LabVIEW platform, a re-usable federate based on the ucef-gateway</li>
-			<li style="text-align:left; tab-stops: list .5in;">Courses of Action (COA) &ndash; graphical experiment orchestration language in WebGME</li>
-			</ul>
+            <p style="line-height: normal;"><strong><span style="font-size: 14.0pt;">Please use the above link to download UCEF 1.0.0 BETA rather than trying to build the virtual machine from github</span></strong></p>
+            
+            <p style="text-align:left; line-height: normal;">Our automated build process no longer works due to recent changes to the distribution of the Oracle Java Development Kit (JDK). Our team is working to transition the UCEF virtual machine to an alternative, open-source implementation of Java called OpenJDK. Until we have a stable virtual machine based on OpenJDK, builds from github will be unavailable. Interested users should download the UCEF 1.0.0 BETA from the link above. A new version of the virtual machine that contains the current stable version of the code will be released on this site soon.</p>
+
             <!-- End Banner insert -->
             <hr <!-- Ballon Links set static\css\style.css line ~6653 to width percentage per balloon; i.e. 3 is 33%, 4 is 25%, ...-->
             <h2 class="section-title">UCEF is an open-source tool kit that provides a collaborative experiment-development environment.</h2>
